--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Test Suite</title>
   <script src="/asyncTests.js"></script>
-  <!-- <script src="/tests.js"></script> -->
+  <script src="/tests.js"></script>
   <style>
     body {
       background: lightgrey;
