--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
     .results li.fail {
       color: rgb(255, 70, 70)
     }
+
+    #first,
+    #second {
+      padding: 0
+    }
   </style>
 </head>
 
 <body>
+  <div id="first"></div>
+  <div id="second"></div>
   <ul class="results"></ul>
 </body>
 
