Получение экземпляров объектов и прототипы

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
 <body>
   <ul class="results"></ul>
+  <div id='a'>I'm going to be removed.</div>
+  <div id='b'>I'm going to be removed.</div>
 </body>
 
 </html>
